# pr-dashboard

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-26-pr-dashboard.md  2026-03-27-web-migration.md  2026-03-30-approved-tab.md  2026-03-30-notification-ux.md  2026-03-30-pr-card-enhancement.md  2026-03-30-uiux-integrated-refactor.md  2026-03-30-ux-improvements.md  2026-04-01-entity-color-badge.md  2026-04-01-view-toggle-and-notification-scroll.md  2026-04-08-re-requested-review-badge.md
docs/superpowers/specs/: 2026-03-26-pr-dashboard-design.md  2026-03-27-web-migration-design.md  2026-03-30-approved-tab-design.md  2026-03-30-notification-ux-design.md  2026-03-30-pr-card-enhancement-design.md  2026-03-30-uiux-integrated-refactor-design.md  2026-03-30-ux-improvements-design.md  2026-04-01-entity-color-badge-design.md  2026-04-01-view-toggle-and-notification-scroll-design.md  2026-04-08-badge-text-overflow-design.md  (+1 more)
src/: App.svelte  app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  lib.rs  main.rs  tray.rs
src/components/: Dashboard.svelte  FilterBar.svelte  Login.svelte  PRCard.svelte  PRList.svelte  Settings.svelte  TabBar.svelte
src/lib/: notifications.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
tests/: setup.ts  smoke.test.ts
tests/lib/: notifications.test.ts  utils.test.ts
(+21 files in other folders)
