[package]
name = "pr-dashboard"
version = "0.1.0"
description = "PR Dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "pr_dashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pr-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
