[package]
name = "pr-dashboard"
version = "0.1.0"
description = "PR Dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "pr_dashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pr-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2"
image = "0.25.10"
